--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,13 +4,13 @@ on:
     branches:
       - master
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "5 * * * *"
 jobs:
   update-gist:
     runs-on: ubuntu-latest
     steps:
       - name: Update gist
-        uses: maxam2017/productive-box@master
+        uses: GwiHwan-Go/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
